[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "issutilities"
version = "0.1.0"
description = "A small utilities file made for my Discord bots."
readme = "issutilities/README.md"
requires-python = ">=3.12"
license = {file = "issutilities/LICENSE"}
authors = [
    {name = "issu"},
]
maintainers = [
    {name = "issu"},
]
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "discord>=2.3.2",
    "wavelink>=3.2.0",
    "roblox==2.0.0",
]